update div to use section tag

--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -22,7 +22,7 @@ The default section displays left-aligned content, medium top and bottom padding
 </Canvas>
 
 ```html
-<div class="uq-section">
+<section class="uq-section">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title"><!--section title--></h2>
@@ -31,7 +31,7 @@ The default section displays left-aligned content, medium top and bottom padding
       <!--section content-->
     </div>
   </div>
-</div>
+</section>
 ```
 
 ## Variants
@@ -49,7 +49,7 @@ Add class `uq-section--centered` to centre-align the content.
 </Canvas>
 
 ```html
-<div class="uq-section uq-section--centered">
+<section class="uq-section uq-section--centered">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title"><!--section title--></h2>
@@ -58,7 +58,7 @@ Add class `uq-section--centered` to centre-align the content.
       <!--section content-->
     </div>
   </div>
-</div>
+</section>
 ```
 
 ### Narrow
@@ -70,7 +70,7 @@ Add class `uq-section--narrow` to contain the content to a narrow container.
 </Canvas>
 
 ```html
-<div class="uq-section uq-section--narrow">
+<section class="uq-section uq-section--narrow">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title"><!--section title--></h2>
@@ -79,7 +79,7 @@ Add class `uq-section--narrow` to contain the content to a narrow container.
       <!--section content-->
     </div>
   </div>
-</div>
+</section>
 ```
 
 ### Shaded
@@ -91,7 +91,7 @@ Add class `uq-section--shaded` to apply a light-grey background to the section.
 </Canvas>
 
 ```html
-<div class="uq-section uq-section--shaded">
+<section class="uq-section uq-section--shaded">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title"><!--section title--></h2>
@@ -100,7 +100,7 @@ Add class `uq-section--shaded` to apply a light-grey background to the section.
       <!--section content-->
     </div>
   </div>
-</div>
+</section>
 ```
 
 ### Padding
@@ -123,7 +123,7 @@ Default sections have medium padding on top and bottom. The following variants p
 </Canvas>
 
 ```html
-<div class="uq-section uq-section--no-top-padding uq-section--no-bottom-padding">
+<section class="uq-section uq-section--no-top-padding uq-section--no-bottom-padding">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title"><!--section title--></h2>
@@ -132,7 +132,7 @@ Default sections have medium padding on top and bottom. The following variants p
       <!--section content-->
     </div>
   </div>
-</div>
+</section>
 ```
 #### Large padding
 <Canvas withSource="none">
@@ -140,7 +140,7 @@ Default sections have medium padding on top and bottom. The following variants p
 </Canvas>
 
 ```html
-<div class="uq-section uq-section--large-top-padding uq-section--large-bottom-padding">
+<section class="uq-section uq-section--large-top-padding uq-section--large-bottom-padding">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title"><!--section title--></h2>
@@ -149,7 +149,7 @@ Default sections have medium padding on top and bottom. The following variants p
       <!--section content-->
     </div>
   </div>
-</div>
+</section>
 ```
 
 ## How and when to use
