add utilities and update pdo to test

--- a/packages/storybook-html/src/components/body/body-utilities.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-utilities.docs.mdx
@@ -41,6 +41,12 @@ Coming soon
 ## Visibility
 <Story id="components-body-utilities--visibility-utils" />
 
+<><br /></>
+
+### Print visibility
+- `.show-for-print` - Add classname to element to show when printing
+- `.hide-for-print` - Add classname to element to hide when printing
+
 ## Embedded media
 
 Coming soon
