--- a/packages/storybook-html/src/components/body/body.story.mdx
+++ b/packages/storybook-html/src/components/body/body.story.mdx
@@ -6,7 +6,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # Body
 <StatusBadge.Review /><StatusBadge.ReviewDoc />
 
-The `@uqds/body` package provides basic HTML element style rules and utility
+The `@uqds/body` package provides basic HTML element styles, basic print styles, and utility
 classes.
 
 ## Install as a dependency
