--- a/packages/storybook-html/src/components/page-header/page-header.docs.mdx
+++ b/packages/storybook-html/src/components/page-header/page-header.docs.mdx
@@ -34,18 +34,18 @@ The default background color is set to light grey to distinguish it from the pag
     <div class="uq-grid__col uq-grid__col--6">
       <h1 class="page__title">Page title</h1>
 
-      <ol class="breadcrumb-trail" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-        <li class="breadcrumb breadcrumb--home" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+      <ol class="breadcrumb-trail" itemscope="" itemtype="https://schema.org/BreadcrumbList">
+        <li class="breadcrumb breadcrumb--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
           <a title="Home" href="/" class="breadcrumb__link breadcrumb__link--home">
             <span class="icon icon-uq-home"></span>
           </a>
           <meta itemprop="position" content="1">
         </li>
-        <li class="breadcrumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+        <li class="breadcrumb" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
           <a class="breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
           <meta itemprop="position" content="2">
         </li>
-        <li class="breadcrumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+        <li class="breadcrumb" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
           <a class="breadcrumb__link" itemprop="item" href="/information-and-services/human-resources" title="">Human resources</a>
           <meta itemprop="position" content="3">
         </li>
