Minor name update

--- a/packages/storybook-html/templates/component.docs.mdx
+++ b/packages/storybook-html/templates/component.docs.mdx
@@ -17,7 +17,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <text> or <bullet points> - Summary of component
 
-## Default example
+## Default
 
 <text>
 
@@ -31,7 +31,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 
 
-## Variant examples
+## Variants
 
 <text>
 
