--- a/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
+++ b/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
@@ -11,7 +11,9 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 For quoting a passage of text or speech from another source.
 
-## Default example
+## Default
+
+Displays the text content and attribution of the blockquote in purple text on a white background. 
 
 <Canvas withSource="none">
   <Story id="components-blockquote" />
@@ -29,7 +31,7 @@ For quoting a passage of text or speech from another source.
 </blockquote>
 ```
 
-## Variant examples
+## Variants
 
 ### Dark backgrounds
 
