update storybook docs heading styles and remove br and hr from markdown files

--- a/packages/storybook-html/src/components/body/body.story.mdx
+++ b/packages/storybook-html/src/components/body/body.story.mdx
@@ -6,6 +6,8 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # Body
 <StatusBadge.Review /><StatusBadge.ReviewDoc />
 
+## Overview
+
 The `@uqds/body` package provides basic HTML element styles, basic print styles, and utility
 classes.
 
