--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -5,6 +5,8 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <StatusBadge.Stable /><StatusBadge.StableDoc />
 
+## Overview
+
 Layouts using our grid are achieved using a combination of `.uq-grid` (*grid
 container*) and `.uq-grid__col` (*grid column*) elements and their modifiers.
 
