--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -3,7 +3,9 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Global header
 
-<StatusBadge.Review /><StatusBadge.DraftDoc />
+<StatusBadge.Stable /><StatusBadge.StableDoc />
+
+## Overview
 
 The global header provides a consistent branding and navigational element across
 all UQ pages. Reinforced by the UQ strapline, the header enables users to
