--- a/packages/storybook-html/src/components/loading-spinner/loading-spinner.docs.mdx
+++ b/packages/storybook-html/src/components/loading-spinner/loading-spinner.docs.mdx
@@ -7,7 +7,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 The loading spinner component is a progress indicator used to provide feedback that data is being processed.
 
-## Example
+## Default
 
 <Canvas withSource="none">
   <Story id="components-loading-spinner--loading-spinner" />
