--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -3,15 +3,11 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Sections
 
-<StatusBadge.Review /><StatusBadge.DraftDoc />
-
-<><br /></><><br /></>
+<StatusBadge.Stable /><StatusBadge.StableDoc />
 
 ## Overview
 
 Sections are a layout style that wrap content in a white or grey background with a range of width, alignment, and padding options. 
-
-<><br /></>
 
 ## Default
 
@@ -37,8 +33,6 @@ The default section displays left-aligned content, medium top and bottom padding
 ## Variants
 
 The variants can be used in isolation or combined. For example if you would like a section to display with centre-aligned content in a narrow container, add both of the variant classnames to the section. 
-
-<><br /></>
 
 ### Centered
 
@@ -115,8 +109,6 @@ Default sections have medium top and bottom padding. The following variants prov
 - No bottom padding - `uq-section--padding-bottom-none` 
 - Large bottom padding - `uq-section--padding-bottom-large`
 
-<><br /></>
-
 #### No padding
 <Canvas withSource="none">
   <Story id="layout-sections--sections-no-padding" />
@@ -155,8 +147,6 @@ Default sections have medium top and bottom padding. The following variants prov
 ## How and when to use
 
 Sections are primarily used on landing pages to create strips of content stacked vertically down the page, while containing the content to the page width.
-
-<><br /></>
 
 ## Accessibility
 
