--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -48,3 +48,29 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
   </div>
 </div>
 ```
+
+### Tall hero
+
+<Canvas withSource="none" withToolbar>
+  <Story id="components-hero--tall" height={600} />
+</Canvas>
+
+```html
+<div class="uq-hero uq-hero--feature-image uq-hero--tall">  
+  <div class="uq-hero__image">
+    <div class="uq-hero__image--small">
+      <img src="/images/hero/hero-example--small.jpg" />
+    </div>
+    <div class="uq-hero__image--large">
+      <img src="/images/hero/hero-example--large.jpg" />
+    </div>
+  </div>
+  <div class="uq-hero__content">
+    <div class="uq-hero__text">
+      <h1>Start postgraduate study online</h1>
+      <p class="uq-hero__subtext">Apply by June 30</p>
+      <p><a class="uq-button" href="#">Learn more</a></p>
+    </div>
+  </div>
+</div>
+```
