added alt text to hero image

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -10,7 +10,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 ### Default hero
 
 <Canvas withSource="none" withToolbar>
-  <Story id="components-hero--default-hero" height={505} />
+  <Story id="components-hero--default-hero" height={300} />
 </Canvas>
 
 ```html
@@ -33,10 +33,10 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <div class="uq-hero uq-hero--feature-image">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
-      <img src="/images/hero/hero-example--small.jpg" />
+      <img src="/images/hero/hero-example--small.jpg" alt="A postgraduate student using a laptop" />
     </div>
     <div class="uq-hero__image--large">
-      <img src="/images/hero/hero-example--large.jpg" />
+      <img src="/images/hero/hero-example--large.jpg" alt="A postgraduate student using a laptop" />
     </div>
   </div>
   <div class="uq-hero__content">
@@ -49,7 +49,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 </div>
 ```
 
-### Tall hero
+### Tall variant
 
 <Canvas withSource="none" withToolbar>
   <Story id="components-hero--tall" height={600} />
@@ -59,10 +59,10 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <div class="uq-hero uq-hero--feature-image uq-hero--tall">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
-      <img src="/images/hero/hero-example--small.jpg" />
+      <img src="/images/hero/hero-example--small.jpg" alt="A postgraduate student using a laptop" />
     </div>
     <div class="uq-hero__image--large">
-      <img src="/images/hero/hero-example--large.jpg" />
+      <img src="/images/hero/hero-example--large.jpg" alt="A postgraduate student using a laptop" />
     </div>
   </div>
   <div class="uq-hero__content">
