tweaked variant to --large. updated and fixed docs

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -49,14 +49,14 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 </div>
 ```
 
-### Tall variant
+### Large variant
 
 <Canvas withSource="none" withToolbar>
-  <Story id="components-hero--tall" height={600} />
+  <Story id="components-hero--large-hero" height={600} />
 </Canvas>
 
 ```html
-<div class="uq-hero uq-hero--feature-image uq-hero--tall">  
+<div class="uq-hero uq-hero--feature-image uq-hero--large">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
       <img src="/images/hero/hero-example--small.jpg" alt="A postgraduate student using a laptop" />
