added non-h1 styles to avoid reliance on h1

--- a/packages/storybook-html/src/components/hero/hero.docs.mdx
+++ b/packages/storybook-html/src/components/hero/hero.docs.mdx
@@ -17,7 +17,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 <div class="uq-hero">  
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1>Page title</h1>
+      <h1 class="uq-hero__title">>Page title</h1>
     </div>
   </div>
 </div>
@@ -41,7 +41,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
   </div>
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1>Start postgraduate study online</h1>
+       <div class="uq-hero__title">Start postgraduate study online</div>
       <p class="uq-hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
     </div>
@@ -67,7 +67,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
   </div>
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1>Start postgraduate study online</h1>
+       <div class="uq-hero__title">Start postgraduate study online</div>
       <p class="uq-hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
     </div>
