add height to story in mdx to set iframe height

--- a/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
+++ b/packages/storybook-html/src/components/blockquote/blockquote.docs.mdx
@@ -16,7 +16,7 @@ For quoting a passage of text or speech from another source.
 Displays the text content and attribution of the blockquote in purple text on a white background. 
 
 <Canvas withSource="none">
-  <Story id="components-blockquote" />
+  <Story height={170} id="components-blockquote" />
 </Canvas>
 
 ```html
@@ -35,7 +35,7 @@ Displays the text content and attribution of the blockquote in purple text on a 
 ### Dark backgrounds
 
 <Canvas withSource="none">
-  <Story id="components-blockquote--blockquote-dark" />
+  <Story height={170} id="components-blockquote--blockquote-dark" />
 </Canvas>
 
 ```html
@@ -86,7 +86,7 @@ Displays the text content and attribution of the blockquote in purple text on a 
 ### Quotemark, Dark
 
 <Canvas withSource="none">
-  <Story id="components-blockquote--blockquote-quotemark-dark" />
+  <Story height={170} id="components-blockquote--blockquote-quotemark-dark" />
 </Canvas>
 
 ```html
